--- a/modulo-1-html/Clases/Clase4/Ejercicios/11-Reacciones/Index.html
+++ b/modulo-1-html/Clases/Clase4/Ejercicios/11-Reacciones/Index.html
@@ -16,63 +16,63 @@
 
 
  <div class="Comentario-1">
-    <h3 class="subtitulo-1">@adalovelace</h3>
+    <h3 class="subtitulo-1"><a href target="_blank">@adalovelace</a></h3>
     <p class="momento">Hace 15 minutos</p>
     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> odio nisi laborum odit? Harum omnis facere corporis,<br>
  eaque doloremque explicabo nisi aperiam quis commodi dolores at. </p>
  <div class="reacciones">
-    <span class="reaccion">❤️ 2 |</span>
-    <span class="reaccion">👍 4 |</span>
-    <span class="reaccion">👏 3 |</span>
+    <span class="reaccion">❤️ 2 </span>
+    <span class="reaccion">👍 4 </span>
+    <span class="reaccion">👏 3 </span>
     <span class="reaccion">🔥 5</span>
 </div>
 
 <div class="Comentario-2">
-    <h3 class="subtitulo-2">@kintataban</h3>
-    <p class="momento">Hace 15 minutos</p>
+    <h3 class="subtitulo-2"><a href target="_blank">@kintataban</a></h3>
+    <p class="momento">Hace 2 horas</p>
     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> odio nisi laborum odit? Harum omnis facere corporis,<br>
  eaque doloremque explicabo nisi aperiam quis commodi dolores at. </p>
  <div class="reacciones">
-    <span class="reaccion">❤️ 2 |</span>
-    <span class="reaccion">👍 4 |</span>
-    <span class="reaccion">👏 3 |</span>
+    <span class="reaccion">❤️ 2 </span>
+    <span class="reaccion">👍 4 </span>
+    <span class="reaccion">👏 3 </span>
     <span class="reaccion">🔥 5</span>
 </div>
 
 <div class="Comentario-3">
-    <h3 class="subtitulo-3">@graciadena</h3>
-    <p class="momento">Hace 15 minutos</p>
+    <h3 class="subtitulo-3"><a href target="_blank">@graciadena</a></h3>
+    <p class="momento">Hace 4 horas</p>
     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> odio nisi laborum odit? Harum omnis facere corporis,<br>
  eaque doloremque explicabo nisi aperiam quis commodi dolores at. </p>
  <div class="reacciones">
-    <span class="reaccion">❤️ 2 |</span>
-    <span class="reaccion">👍 4 |</span>
-    <span class="reaccion">👏 3 |</span>
+    <span class="reaccion">❤️ 2 </span>
+    <span class="reaccion">👍 4 </span>
+    <span class="reaccion">👏 3 </span>
     <span class="reaccion">🔥 5</span>
 </div>
 
 <div class="Comentario-4">
-    <h3 class="subtitulo-4">@ramónolivar</h3>
-    <p class="momento">Hace 15 minutos</p>
+    <h3 class="subtitulo-4"><a href target="_blank">@ramónolivar</a></h3>
+    <p class="momento">Hace 10 horas</p>
     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> odio nisi laborum odit? Harum omnis facere corporis,<br>
  eaque doloremque explicabo nisi aperiam quis commodi dolores at. </p>
  <div class="reacciones">
-    <span class="reaccion">❤️ 2 |</span>
-    <span class="reaccion">👍 4 |</span>
-    <span class="reaccion">👏 3 |</span>
+    <span class="reaccion">❤️ 2 </span>
+    <span class="reaccion">👍 4 </span>
+    <span class="reaccion">👏 3 </span>
     <span class="reaccion">🔥 5</span>
 </div>
 
 <div class="Comentario-5">
-    <h3 class="subtitulo-5">@martinaLara</h3>
-    <p class="momento">Hace 15 minutos</p>
+    <h3 class="subtitulo-5"><a href target="_blank">@martinaLara</a></h3>
+    <p class="momento">Hace 1 día</p>
     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> odio nisi laborum odit? Harum omnis facere corporis,<br>
  eaque doloremque explicabo nisi aperiam quis commodi dolores at. </p>
  <div class="reacciones">
-    <span class="reaccion">❤️ 2 |</span>
-    <span class="reaccion">👍 4 |</span>
-    <span class="reaccion">👏 3 |</span>
-    <span class="reaccion">🔥 5</span>
+    <span class="reaccion">❤️ 2 </span>
+    <span class="reaccion">👍 4 </span>
+    <span class="reaccion">👏 3 </span>
+    <span class="reaccion">🔥 5</span> 
 </div>
 
  </div>
