--- a/modulo-1-html/Actividad Extra/Petshop/Index.html
+++ b/modulo-1-html/Actividad Extra/Petshop/Index.html
@@ -5,55 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petshop</title>
     <link rel="stylesheet" href="styles.css">
-    <p class="tema-pagina">Grandes ofertas en comederos</p>
-    <h6 class="Idioma"><b>Español</b></h6>
-    <h6 class="moneda"><b>$ARG</b></h6>
+    
 </head>
 <body>
-    <img src="Images/images/LogoCabecera.png" alt="Logo Cabecera">
+    
+    <nav>
+    <p class="tema-pagina">Grandes ofertas en comederos 
+    <span class="idioma">Español<img src="Images/images/vi+¦eta.png" alt="flecha"></span> 
+    <span class="moneda">$ARG<img src="Images/images/vi+¦eta.png" alt="flecha"></span></p>
+   
+    <div class="header-content">
+    <img src="Images/images/LogoCabecera.png" alt="Logo Cabecera" class="logo">
 
     <ul>
- <li>Categorías</li>
- <li>Pets</li>
- <li>Nosotros</li>
- <li>Contactanos</li>
-
+        <li>
+            <img src="Images/images/huellaChica.png" alt="Categorias" class="icono">
+            <span>Categorías</span>
+          </li>
+          <li>
+            <img src="Images/images/huellaChica.png" alt="Pets" class="icono">
+            <span>Pets</span>
+          </li>
+          <li>
+            <img src="Images/images/huellaChica.png" alt="Nosotros" class="icono">
+            <span>Nosotros</span>
+          </li>
+          <li>
+            <img src="Images/images/huellaChica.png" alt="Contactanos" class="icono">
+            <span>Contactanos</span>
+          </li>
+ 
     </ul>
-
-<img src="Images/images/fondoPlato.png" alt="Imagen_grande">
+</div>
+</nav>
 
 <h1 class="Titulo-principal">¡Es un placer tenerte aquí!</h1>
 
+<div class="contenedor-imagen"></div>
+<img src="Images/images/fondoPlato.png" alt="Imagen_grande" class="Imagen_grande">
+
 <h2 class="subtitulo">¡Comederos en descuento!</h2>
 
-<h2 class="Uppercase-subtitulo">COMEDEROS</h2>
+<h3 class="Uppercase-subtitulo">COMEDEROS</h3>
+</div>
 
 <br>
 <br>
+<section class="productos">
+
+<div class="encabezado-productos">
+<img src="Images/images/huellaGrande.png" alt="huella-Grande" class="huella-Grande">
+
 <h2 class="Productos-destacados">Productos Destacados</h2>
-<p>Comederos - Accesorios - Comida</p>
+<p class="texto-categorias">Comederos - Accesorios - Comida</p>
+</div>
 
+<div class="producto-1">
+<img src="Images/images/churrasquito.png" alt="Juguete-churrasquito" class="Juguete-churrasquito">
+<h3>Juguete Churrasquito</h3>
+<span class="precio">$150</span>
+</div>
 
-<img src="Images/images/churrasquito.png" alt="Juguete-churrasquito">
-<figcaption><br>Juguete Churrasquito <br><br> $150 </figcaption><br>
+<div class="producto-2">
+<img src="Images/images/comedero.png" alt="Comedero-para-perro" class="Comedero-para-perro">
+<h3>Comedero para perro</h3>
+<span class="precio">$250</span>
+</div>
 
-<img src="Images/images/comedero.png" alt="Comedero-para-perro">
-<figcaption><br>Comedero para perro <br><br> $250 </figcaption><br>
+<div class="producto-3">
+<img src="Images/images/Huesito.png" alt="Juguete-huesito" class="Juguete-huesito">
+<h3>Juguete Huesito</h3>
+<span class="precio">$650</span>
+</div>
 
-<img src="Images/images/Huesito.png" alt="Juguete-huesito">
-<figcaption><br>Juguete Huesito <br><br> $650 </figcaption><br>
+</section>
 
 <footer>
     <p class="derechos-reservados">&copy;Todos los derechos reservados Front End</p>
 </footer>
-
-
-
-
-
-
-
-
 
 
 </body>
