Agregar paso 2, terminado

--- a/modulo-1-html/Actividad Extra/Petshop/Index.html
+++ b/modulo-1-html/Actividad Extra/Petshop/Index.html
@@ -80,7 +80,47 @@
 
 </section>
 
+<section id="contactanos">
+  <h2>Contáctanos</h2>
+  
+</section>
+
+<section class="suscribete">
+  <p>Suscríbete para más novedades</p>
+  
+</section>
+
 <footer>
+
+  <section class="contenedor-footer">
+  <div class="contenedor-localidad">
+    <img src="Images/images/logoUbicacion.png" alt="logo-localidad" class="logo-localidad">
+    <div class="texto-localidad">
+      <h2 class="localidad">Localidad</h2>
+      <p class="localidad-descripcion">Calle - Provincia</p>
+    </div>
+  </div>
+
+  <div class="contenedor-telefono">
+    <img src="Images/images/logoTelefono.png" alt="logo-telefono" class="logo-telefono">
+    <div class="texto-telefono">
+    <h2 class="telefono">Teléfono</h2>
+    <p class="teléfono-descripcion">Número de teléfono</p>
+    </div>
+  </div>
+
+  <div class="contenedor-mail">
+    <img src="Images/images/logoCorreo.png" alt="logo-correo" class="logo-correo">
+    <div class="texto-mail">
+    <h2 class="mail">Correo electrónico</h2>
+    <p class="mail-descripcion">Dirección de correo</p>
+    </div>
+  </div>
+  
+  
+  <img src="Images/images/LogoFooter.png" alt="Logo-footer" class="logo">
+</section>
+
     <p class="derechos-reservados">&copy;Todos los derechos reservados Front End</p>
 </footer>
 
