--- a/modulo-1-html/Clases/Clase7/11-Footer/Index.html
+++ b/modulo-1-html/Clases/Clase7/11-Footer/Index.html
@@ -61,12 +61,15 @@
                 <div class="container">
                     <nav>
                         
-                        <ul>
+                         <ul class="pie-de-footer">
                             <p class="copyright">2020 UI-Visible. All rights reserved.</p>
+                            <div class="info">
                             <li><a href="#">Terms of Service</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Security</a></li>
                             <li><a href="#">Sitemap</a></li>
+                        </div>
+                        <div class="redes">
                             <li>
                                 <a href="https://www.facebook.com/tuperfil" target="_blank">
                                     <img src="./Images/iconos-04.png" alt="Facebook">
@@ -82,6 +85,7 @@
                                     <img src="./Images/iconos-02.png" alt="Instagram">
                                 </a>
                             </li>
+                        </div>
                             </ul>
                     </nav>
                 </div>
