--- a/modulo-1-html/Clases/Clase8/07-Grilla de productos/Index.html
+++ b/modulo-1-html/Clases/Clase8/07-Grilla de productos/Index.html
@@ -13,9 +13,10 @@
     </header>
 
     <section class="products">
+        <div>
         <h2>Productos más comprados</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nulla nec velit sollicitudin interdum.</p>
-        
+        <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec nulla nec velit sollicitudin interdum.</p>
+    </div>
         <div class="product-grid">
             <!-- Producto 1 -->
             <div class="product-card">
