Agregando ejercicio nuevo

--- a/modulo-1-html/Clases/Clase9/Landing Page/Index.html
+++ b/modulo-1-html/Clases/Clase9/Landing Page/Index.html
@@ -53,7 +53,7 @@
          </div>
 
             <!-- Producto 2 -->
-            <div class="product-card">
+            </i> <div class="product-card">
          <img src="images/1_39.jpg" alt="Imagen 2">
          <div class="description">
             <h3>Producto 2</h3>
